[tool.poetry]
name = "git-limiter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "git_limiter"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^13.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
git-limiter = 'git_limiter:run'