[tool.poetry]
name = "git-limiter"
version = "0.1.1"
description = "Tool allowing to prevent commiting huge diffs"
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
packages = [{include = "git_limiter"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^13.3.3"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.0.2"
mkdocs-material = "^9.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.pyc
  |\.pyi
  |_build
  |buck-out
  |build
  |dist
)
'''


[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
profile = "black"
src_paths = "."
lines_after_imports = 2


[tool.pytest.ini_options]
markers = [
    "integration",
    "unit",
]



[tool.poetry.scripts]
git-limiter = 'git_limiter.cli:run'
